kubectl-deployments-yaml/kubernetes-cloud-deployments/oracle/ingress-setup/kyle-naveen-deployments/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend-app
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: ap-hyderabad-1.ocir.io/axu4lyhxbeg6/frontend-image-oracle:0.1
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: babu-secret
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
