kubectl-deployments-yaml/kubernetes-cloud-deployments/oracle/ingress-setup/kyle-naveen-deployments/store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: mystore.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-auth-service
                port:
                  number: 80
